...
import androidx.compose.ui.Modifier
import com.folderspan.db.FileFilter

enum class FileFilterType(type: String) {
    Folder("Folder"),
    File("File"),
    Hidden("Hidden"),
    Text("Text"),
    Audio("Audio"),
    Video("Video"),
    Image("Image"),
    ImageRaw("ImageRaw"),
    ImageVector("ImageVector"),
...
